Fixed bug where overflow was shown on Edge

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ noscript {
 }
 
 img.ttl {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
